--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -196,14 +196,36 @@
   background-color: $bgc;
   position: relative;
   overflow: hidden;
+  height: 100vh;
+  max-height: 1366px;
+
+  @media (max-width: 880px) {
+    height: auto;
+    min-height: 100vh;
+    background: #315d34 url(../images/bottom-screen-bg.png) right center no-repeat;
+
+    .screen-alert, .screen-alert.mobile {
+      display: none;
+
+    }
+  }
 }
+
+
 .benefits-slide {
   overflow: hidden;
   position: relative;
   background-color: $bgc;
 
+  @media (max-width: 880px) {
+    background: none;
+  }
   &-cols {
     display: flex;
+
+    @media (max-width: 880px) {
+      display: block;
+    }
   }
 
   &-img {
@@ -211,20 +233,11 @@
     max-width: 43%;
     height: 100vh;
     max-height: 1366px;
-  }
-
-  &-content {
-    flex: 0 0 57%;
-    max-width: 57%;
-    height: 100vh;
-    max-height: 1366px;
-  }
-
-  &-img {
     position: relative;
 
     &-bg {
       position: absolute;
+      display: block;
       left: 0;
       top: 0;
       width: 100%;
@@ -232,18 +245,80 @@
       object-fit: cover;
       object-position: center;
     }
+
+    @media (max-width: 880px) {
+      height: auto;
+      overflow: hidden;
+      max-height: 90vh;
+      max-width: 100%;
+
+      &-bg {
+        position: static;
+        aspect-ratio: 82/100;
+        height: auto;
+      }
+    }
   }
 
-  &-content {    
-    padding: min(16vh,156px) 160px 120px 150px;
+  &-content {
+    flex: 0 0 57%;
+    max-width: 57%;
+    height: 100vh;
+    max-height: 1366px;
+    padding: 150px 50px calc(28vh + 230px) 150px;
     background: url(../images/bottom-screen-bg.png) right center no-repeat;
     background-size: 100% 100%;
+
+    @media (min-width: 1920px), (min-height: 1000px) {
+      padding-bottom: calc(8vh + 450px);
+    }
+    @media (max-height: 920px) {
+      padding-bottom: calc(8vh + 290px);
+    }
+
+    @media (max-width: 1680px) {
+      padding-left: 6.5vw;
+    }
+
+    @media (max-width: 1440px) {
+      padding-right: 40px;
+    }
+  
+    @media (max-width: 992px) {
+      padding-right: 35px;
+    }
+
+    @media (max-width: 880px) {
+      max-width: 100%;
+      padding-left: 35px;
+      padding-top: 30px;
+      padding-bottom: 30px;
+      height: auto;
+      background: none;
+    }
+  
+    @media (max-width: 599px) {
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+  
+    @media (max-width: 420px) {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
   }
 
   &-inner {
     position: relative;
     height: 100%;
-    max-width: 870px;
+    max-width: 830px;
+    display: flex;
+    align-items: flex-end;
+
+    @media (max-width: 880px) {
+      display: block;
+      height: auto;
+    }
   }
 
   &-descr {
@@ -254,20 +329,9 @@
     color: #FFF;
     font-weight: 500;
     text-transform: uppercase;
-    @media (max-width: 1680px) {
-      @include fz(38); 
-    }
-    @media (max-width: 1366px) {
-      @include fz(30);
-    }
-    @media (max-width: 1180px) {
-      @include fz(24);
-    }
-    @media (max-width: 992px) {
-      @include fz(21);
-    }
-    @media (max-width: 599px) {
-      @include fz(20);
+
+    @media (max-width: 1920px), (max-height: 900px) {
+      font-size: 2.45vmax;
     }
 
     & > :last-child {
@@ -289,7 +353,11 @@
   &-slogan {
     position: absolute;
     bottom: 0;
-    right: 0;  
+    right: 0;
+
+    visibility: hidden;
+    opacity: 0;
+
     @media (max-width: 768px) {
       display: none;
       visibility: hidden;
@@ -311,6 +379,14 @@
     }
   }
 
+
+
+  @media (max-width: 992px) {
+    &-inner {
+      max-width: 100%;
+    }
+  }
+
   &-where {
     position: absolute;
     left: 43%;
@@ -318,326 +394,210 @@
     transform: translate(-50%, 0);
     max-width: 50%;
     max-height: calc(100% - 70px);
+
     @media (max-width: 1680px) {
-      height: 150px;
-    }
-    @media (max-width: 1366px) {
-      height: 120px;
+      height: 160px;
     }
     @media (max-width: 1180px) {
-      height: 100px;
+      height: 140px;
     }
     @media (max-width: 992px) {
-      height: 70px;
+      height: 125px;
     }
-  }
-
-  @media (max-width: 1680px) {
-    &-content {
-      padding: 106px 110px 70px 100px;
-    }
-  }
-
-
-  @media (max-width: 1366px) {
-    &-content {
-      padding: 96px 100px 60px 90px;
-    }
-  }
-
-  @media (max-width: 1180px) {
-    &-content {
-      padding: 76px 80px 70px 70px;
-    }
-  }
-
-  @media (max-width: 992px) {
-    &-img {
-      max-width: 100%;
-
-    }
-    &-content {
-      max-width: 100%;     
-      padding: 40px 50px 80px;
-    }
-    &-title {
-      @include fz(36);
-      margin-bottom: 20px;
-    }    
-    &-descr {   
-      padding-right: 0px;
-    }
-    &-inner {
-      max-width: 100%;
-    }
-  }
-
-  @media (max-width: 768px) and (orientation: portrait) {   
-    &-img {
-      height: 50vh;
-    }
-  }
-  @media (max-width: 768px) {
-    &-cols {
-      display: block;
-    }
-    &-content {
-      padding-left: 30px;
-      padding-right: 30px;
-      padding-bottom: 100%;
-    }
-    &-where {
+    @media (max-width: 880px) {
       display: none;
       visibility: hidden;
     }
   }
+}
 
-  @media (max-width: 599px) {
-    &-content {
-      padding-left: 20px;
-      padding-right: 20px;
-      padding-top: 30px;     
-      padding-bottom: 100%;
-    }
-    &-title {
-      @include fz(30);   
-      margin-bottom: 15px;
-    }
+
+.benefits-nav {
+  position: absolute;
+  bottom: 20vh;
+  left: 43%;
+  z-index: 2;
+  margin-left: 150px;
+  width: 50%;
+  padding: 0 100px 0 0px;
+
+  @media (min-width: 1920px), (min-height: 1000px) {
+    bottom: 220px;
   }
 
-  @media (max-width: 480px) {
-    &-title {
-      font-size: 7vw;
-    }
+  @media (max-height: 920px) {
+    bottom: 100px;
+  }
+ 
+  @media (max-width: 1680px) {
+    margin-left: 6.5vw;
+  }
+
+  @media (max-width: 880px) {
+    margin-left: 0;
+    padding: 0px 20px 30px;
+    width: 100%;
+    text-align: center;
+    bottom: auto;
+    top: min(90vh,121vw);
+    margin-top: -70px;
+    left: 0;
   }
 }
 
-.benefits-slider {
-  &-nav {
-    position: absolute;
-    z-index: 1;
-    left: 43%;
-    margin-left: 150px;
-    width: 50%;
-    bottom: 470px;
-    bottom: min(38vh, 470px);
-    padding: 0 100px 0 0px;
-    @media (max-width: 1680px) {
-      margin-left: 106px; 
-    }
-    @media (max-width: 1366px) {
-      margin-left: 96px; 
-    }
-    @media (max-width: 1180px) {
-      margin-left: 76px; 
-    }
-    @media (max-width: 992px) {
-      margin-left: 50px; 
-    }
+.benefits-previews {
+  margin-bottom: 8.5vh;
+  margin-bottom: clamp(15px, 8.5vh, 88px);
+  font-size: 0;
+  white-space: nowrap;
+  // overflow-y: hidden;
+  // overflow-x: auto;
+
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+    display: none;
+  }
+
+  @media (max-width: 880px) {
+    margin-bottom: 0;
+  }
+}
 
 
-    &-inner {
-      max-width: 500px;    
-      font-size: 0;
-      white-space: nowrap;
+.benefits-preview {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 8px;
+  opacity: 0.75;
+  transition: opacity .2s;
+  position: relative;
+  z-index: 1;
+  cursor: pointer;
+
+  &:hover,
+  &.active {
+    opacity: 1;
+  }
+
+  &.active {
+    &:after {
+      content: "";
+      position: absolute;
+      left: -4px;
+      right: -4px;
+      top: -4px;
+      bottom: -4px;
+      border: 1px solid #FFF8D9;
     }
   }
 
-  &-arrow {
+  img {
+    display: block;
     width: 72px;
     height: 72px;
-    background-color: $primary;
+    object-fit: cover;
+    object-position: center;
 
-    display: inline-block;
-    vertical-align: middle;
-    cursor: pointer;
-    transition: opacity .2s;
-
-    &:not(.swiper-button-disabled):hover {
-      opacity: .75;
-    }
-    &.swiper-button-disabled {
-      cursor: not-allowed;
-      opacity: .35;
-    }
     @media (max-width: 1680px) {
       width: 66px;
       height: 66px;
     }
     @media (max-width: 1366px) {
-      width: 48px;
-      height: 48px;
-    }
-  }
-
-  &-prev {
-    background-image: url(../images/ArrowLeft.svg);
-    background-size: 32px 32px;
-    background-repeat: no-repeat;
-    background-position: center;
-    position: absolute;
-    top: 160px;
-    @media (max-width: 1680px) {
-      top: 140px;
-    }
-    @media (max-width: 1366px) {
-      top: 90px;
-    }
-  }
-  &-next {
-    background-image: url(../images/ArrowRight.svg);   
-    background-size: 32px 32px;
-    background-repeat: no-repeat;
-    background-position: center;
-    position: absolute;
-    top: 160px;
-    left: 90px;
-    @media (max-width: 1680px) {
-      top: 140px;
-    }
-    @media (max-width: 1366px) {
-      top: 90px;
-    }
-  }
-
-  &-previews {
-    display: inline-block;
-    vertical-align: middle;
-    font-size: 0;
-    white-space: nowrap;
-    overflow-y: hidden;
-    overflow-x: auto;
-    max-width: calc(100% - 100px);
-
-    &::-webkit-scrollbar {
-      width: 0;
-      height: 0;
-      display: none;
-    }
-  }
-
-  &-preview {
-    display: inline-block;
-    vertical-align: middle;
-    width: 88px;
-    height: 88px;
-    position: relative;    
-    overflow: hidden;
-    cursor: pointer;
-    opacity: .65;
-    transition: opacity .2s;
- 
-    @media (max-width: 1680px) {
-      width: 82px;
-      height: 82px;
-    }
-
-    &.active {
-      border: 1px solid #FFF8D9;
-      padding: 8px;
-    }
-    &:not(.active):first-of-type {
-      margin-left: -8px;
-    }
-    &.active,
-    &:hover {
-      opacity: 1;
-    }
-
-    img {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-      width: 72px;
-      height: 72px;
-      object-fit: cover;
-      object-position: center;
- 
-      @media (max-width: 1680px) {
-        width: 66px;
-        height: 66px;
-      }
-      @media (max-width: 1366px) {
-        width: 44px;
-        height: 44px;
-      }
-    }
-  }
-
-  @media (max-width: 1366px) {
-    &-nav {
-      width: 58%;      
-    }
-    
-    &-preview {
-      width: 48px;
-      height: 48px;
-    }
-  }
-
-
-  @media (max-width: 765px) {
-    &-nav {
-      position: static;
-    }
-    &-arrow {
-      position: absolute;
-      top: 37.5vh;
-      transform: translate(0, -50%);
-      z-index: 2;
-    }
-    &-prev {
-      left: 40px;
-    }
-    &-next {
-      right: 40px;
-      left: unset;
-    }
-    &-previews {
-      position: absolute;
-      left: 0;
-      right: 0;
-      bottom: 40px;
-      z-index: 2;
-      text-align: center;
-      margin: 0 auto;
-    }
-  }
-
-  @media (max-width: 768px) and (orientation: portrait) {
-    &-arrow {
-      top: 25vh;
-    }
-  }
-
-  @media (max-width: 768px) {
-    &-prev {
-      left: 30px;
-    }
-    &-next {
-      left: unset;
-      right: 30px;
-    }
-  }
-
-  @media (max-width: 599px) {
-    &-prev {
-      left: 20px;
-    }
-    &-next {
-      right: 20px;
-    }
-    &-previews {
-      bottom: 90px;
-    }
-    &-preview {
-      width: 40px;
-      height: 40px;
-      margin: 0px 4px;
+      width: 60px;
+      height: 60px;
     }
   }
 }
+
+.benefits-arrows {
+  font-size: 0;
+}
+
+.benefits-arrow {
+  width: 72px;
+  height: 72px;
+  background-color: $primary;
+  display: inline-block;
+  vertical-align: middle;
+  cursor: pointer;
+  transition: opacity .2s;
+  margin-right: 8px;
+
+  &:not(.swiper-button-disabled):hover {
+    opacity: .75;
+  }
+  &.swiper-button-disabled {
+    cursor: not-allowed;
+    opacity: .35;
+  }
+
+  @media (max-width: 1680px) {
+    width: 66px;
+    height: 66px;
+  }
+  @media (max-width: 1366px) {
+    width: 60px;
+    height: 60px;
+  }
+
+  @media (max-width: 880px) {
+    display: none;
+    visibility: hidden;
+    
+  }
+}
+
+.benefits-prev {
+  background-image: url(../images/ArrowLeft.svg);
+  background-size: 32px 32px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.benefits-next {
+  background-image: url(../images/ArrowRight.svg);   
+  background-size: 32px 32px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+
+.benefits-slogan {
+  position: absolute;
+  left: 50%;
+  bottom: min(120px, 12vh);
+  margin-left: 840px;
+  z-index: 1;
+  transform: translate(-100%,0);
+  width: 240px;
+  max-width: 12%;
+  text-align: right;
+
+  img {
+    max-height: 33vh;
+  }
+
+  @media (max-width: 1780px) {
+    left: auto;
+    margin-left: 0;
+    right: 50px;
+    transform: none;
+  }
+  @media (max-width: 1440px) {
+    right: 40px;
+    bottom: min(100px, 9vh);
+  }
+
+  @media (max-width: 992px) {
+    right: 35px;
+  }
+
+  @media (max-width: 880px) {
+    display: none;
+    visibility: hidden;
+  }
+}
+
 
 .agree {
   position: fixed;
@@ -852,162 +812,12 @@
   }
 }
 
-.benefits-slide-descr.max-height-auto{max-height: none}
-@media (max-height: 700px){.benefits-slide-descr img{max-height: 100px;width: auto;}}
 
 
-.benefits-slide-img-signature {
-  background: #B9B1BB url(../images/top-screen-bg.jpeg) left bottom no-repeat;
-  background-size: cover;
-}
-.benefits-slide-bg-signature {
-  position: absolute;
-  left: 5%;
-  top: 50%;
-  transform: translate(0, -50%);
-  width: 90%;
-}
+
 .screen-benefits {
   &-cols {
     display: flex;
-  }  
-
-  &-slider {
-    flex: 0 0 83.3%;
-    max-width: 83.3%;
-    position: relative;
-  }
-
-
-  @media (min-width: 992px) {
-    &-cols {
-      .benefits-slide {
-        &-content {
-          padding-left: 40px;
-          padding-right: 40px;
-        }
-      }
-      .benefits-slider {
-        &-nav {
-          padding-left: 40px;
-          padding-right: 40px;
-        }
-      }
-    }    
-  }
-
-    @media (max-width: 1600px) {
-    &-logo {
-      flex: 0 0 20%;
-      max-width: 20%;
-    }
-
-    &-slider {
-      flex: 0 0 80%;
-      max-width: 80%;
-    }
-  }
-
-  @media (max-width: 1366px) and (min-width: 992px) {
-    &-cols {
-      .benefits-slide {
-        &-img,
-        &-content {
-          flex: 0 0 50%;
-          max-width: 50%;
-        }
-      }
-      .benefits-slider {
-        &-nav {
-          width: 50%;
-          left: 50%;
-        }
-      }
-    }
-  }  
-
-  @media (max-width: 1600px) and (min-width: 1366px) {
-    &-cols {
-      .benefits-slide {
-        &-where {
-          max-width: 18%;
-        }
-      }
-    }
-  }
-
-  @media (max-width: 1366px) {
-    &-logo {
-      padding-left: 30px;
-      padding-right: 30px;
-
-      &-img {
-        margin-bottom: 40px;
-      }
-      &-slogan {
-        @include fz(30);
-      }
-    }
-  }
-
-  @media (max-width: 1180px) and (min-width: 992px) {
-    &-cols {
-      .benefits-slide {
-        &-content {
-          padding-right: 40px;
-        }
-      }
-    }
-  }
-
-
-  @media (max-width: 992px) {
-    &-cols {
-      display: block;
-    }
-
-    &-logo {
-      max-width: 100%;
-
-      &-img {
-        margin-bottom: 30px;
-
-        img {
-          width: 300px;
-        }
-      }
-
-      &-slogan {
-        font-size: 46px;
-        max-width: 280px;
-      }
-    }
-    &-slider {
-      max-width: 100%;
-    }
-  }
-
-  @media (max-width: 599px) {
-    &-logo {
-      padding-top: 60px;
-      padding-bottom: 60px;
-
-      &-img {
-        img {
-          width: 250px;
-        }
-      }
-    }
-  }
-
-  @media (max-width: 480px) {
-    &-logo {
-
-      &-slogan {
-        font-size: 36px;
-        max-width: 220px;
-      }
-    }
   }
 }
 
